--- a/AYOTweaks/AYOTweaks.csproj
+++ b/AYOTweaks/AYOTweaks.csproj
@@ -4,10 +4,11 @@
 
   <PropertyGroup>
     <Version>0.0.0.1</Version>
-    <Description>A sample plugin.</Description>
-    <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
+    <Description></Description>
+    <PackageProjectUrl>https://github.com/rkycx/AYO-tweaks</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
+    <Authors>rky</Authors>
   </PropertyGroup>
 
   <ItemGroup>
