Clean up, update to .NET 9 and bump API version

--- a/AYOTweaks/AYOTweaks.csproj
+++ b/AYOTweaks/AYOTweaks.csproj
@@ -9,6 +9,7 @@
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
     <Authors>rky</Authors>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,5 +17,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>false</Visible>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="DalamudPackager" Version="11.0.0" />
   </ItemGroup>
 </Project>
